deploy/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
    name: api-svc
spec:
  selector:
    name: api
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 4000
