deploy/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
  labels:
    name: api-ingress
spec:
  backend:
    serviceName: api-svc
    servicePort: 80
